# infinity-workflows

./: .gitignore  README.md  compose_release.sh  install_conda_env.sh  pyproject.toml  requirements.txt  run_notebooks.sh
infinity-core/: .gitignore  README.rst  pyproject.toml
infinity-core/.github/workflows/: basic-tests.yml  python-package.yml
infinity-core/docs/: Makefile  conf.py  index.md
infinity-core/docs/source/: getting_started.md  module_summaries.md  source_documentation.md
infinity-core/infinity_core/: api.py  api_test.py  batch.py  batch_test.py  data_structures.py  session.py  session_test.py
infinity-core/tests/: test_integration.py
visionfit/: create_a_workflow.ipynb
visionfit/examples/: large_job_demo.ipynb  submit_and_download_batch_demo.ipynb
visionfit/examples/.ipynb_checkpoints/: large_job_demo-checkpoint.ipynb  submit_and_download_batch_demo-checkpoint.ipynb
visionfit/examples/tmp/uppercut left large job demo/: batch_id.txt
visionfit/examples/tmp/uppercut left large job demo/1b3f73c9-0e95-46f7-93c3-ce0ae516b413/: job.json  labels.json  timing.json
visionfit/examples/tmp/uppercut left large job demo/29cb3d89-1454-45c9-b408-f64c6ba6a29d/: job.json  timing.json
visionfit/interfaces/: __init__.py  batch_download.py  common.py  submit.py  workflow.py
visionfit/utils/: images.py  notebook.py  sampling.py  vis.py
visionfit/workflow_templates/: download_batch_template.ipynb  submit_batch_template.ipynb
wheels/: infinity_core-0.1.0-py3-none-any.whl  infinity_tools-0.6.0-py3-none-any.whl
(+7 files in other folders)
