[tool.poetry]
name = "infinity-tutorials-dev"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.5.2"
infinity-tools = { path = "infinity-tools", develop = true }
papermill = "^2.4.0"
ipywidgets = "^8.0.3"
imageio = "^2.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
